--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.qq.smsparser">
 
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.WRITE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -9,7 +15,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.MainActivity">
+        <activity android:name=".controller.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,17 +24,17 @@
         </activity>
 
 
-        <activity android:name=".view.order.OrderGoodMessageAty"></activity>
+        <activity android:name=".controller.order.OrderGoodMessageAty"></activity>
 
-        <activity android:name=".view.send.SendGoodMessageAty">
+        <activity android:name=".controller.send.SendGoodMessageAty">
 
         </activity>
 
-        <activity android:name=".view.analysis.SaleMessageAty"></activity>
-        <activity android:name=".view.helper.HelperMessageAty"></activity>
+        <activity android:name=".controller.analysis.SaleMessageAty"></activity>
+        <activity android:name=".controller.helper.HelperMessageAty"></activity>
 
         <service
-            android:name=".controller.parser.SmsService"
+            android:name=".model.parser.SmsService"
             android:process=".Service">
             <intent-filter>
                 <action android:name="com.example.qq.server"/>
