--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controller.MainActivity">
+        <activity android:name=".controller.MainActivity"
+            android:process=":main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,19 +25,24 @@
         </activity>
 
 
-        <activity android:name=".controller.order.OrderGoodMessageAty"></activity>
+        <activity android:name=".controller.order.OrderGoodMessageAty"
+            android:process=":main">
+        </activity>
 
-        <activity android:name=".controller.send.SendGoodMessageAty"></activity>
-
-        <activity android:name=".controller.analysis.SaleMessageAty"></activity>
-        <activity android:name=".controller.helper.HelperMessageAty"></activity>
+        <activity android:name=".controller.send.SendGoodMessageAty"
+            android:process=":main"></activity>
+        <activity android:name=".controller.analysis.SaleMessageAty"
+            android:process=":main"></activity>
+        <activity android:name=".controller.helper.HelperMessageAty"
+            android:process=":main"></activity>
 
         <service
             android:name=".model.parser.SmsService"
-            android:process=".Service">
+            android:exported="false"
+            android:persistent="true"
+            android:process=":remote">
             <intent-filter>
                 <action android:name="com.example.qq.server"/>
-                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </service>
 
